@@ -52,8 +52,9 @@ GeoDataFeature::~GeoDataFeature()
 
 void GeoDataFeature::initializeDefaultStyles()
 {
-    // We need to do this similar to the way KCmdLineOptions works in the future:
-    // Having a PlaceMarkStyleProperty properties[] would help here greatly.
+    // We need to do this similar to the way KCmdLineOptions works in
+    // the future: Having a PlaceMarkStyleProperty properties[] would
+    // help here greatly.
 
     QString defaultFamily = "Sans Serif";
 
