@@ -14,26 +14,63 @@
 
 #include "Serializable.h"
 
+/**
+ * @short A base class for all geodata objects
+ *
+ * GeoDataObject is the base class for all geodata classes. It is
+ * never instantiated by itself, but is always used as part of a
+ * derived object.
+ *
+ * The Geodata objects are all modeled after the Google KML files as
+ * defined in
+ * http://code.google.com/apis/kml/documentation/kml_tags_21.html.
+ *
+ * A GeoDataObject contains 2 properties, both corresponding directly
+ * to tags in the KML files: the <b>id</b>, which is a unique
+ * identifier of the object, and a <b>targetId</b> which is used to
+ * reference other objects that have already been loaded.
+ *
+ * The <b>id</b> property must only be set if the <b>Update</b>
+ * mechanism of KML is used, which is currently not supported by
+ * Marble.
+ */
 class GeoDataObject : public Serializable
 {
  public:
+    GeoDataObject();
     virtual ~GeoDataObject();
 
+    /**
+     * @brief Get the id of the object.
+     */
     int id() const;
+    /**
+     * @brief Set the id of the object
+     * @param value the new id value
+     */
     void setId( int value );
 
+    /**
+     * @brief Get the targetId of the object to be replaced
+     */
     int targetId() const;
+    /**
+     * @brief set a new targetId of this object
+     * @param value the new targetId value
+     */
     void setTargetId( int value );
 
+    /// Reimplemented from Serializable
     virtual void pack( QDataStream& stream ) const;
+    /// Reimplemented from Serializable
     virtual void unpack( QDataStream& steam );
 
  protected:
     GeoDataObject();
 
  private:
-    int m_id;
-    int m_targetId;
+    int  m_id;
+    int  m_targetId;
 };
 
 #endif // GEODATAOBJECT_H
