@@ -1,3 +1,12 @@
+2007-11-04  Inge Wallin  <inge@lysator.liu.se>
+
+	APIDOX
+	* src/lib/geodata/data/GeoDataObject.h,	
+	* src/lib/geodata/data/GeoDataFeature.h,	
+	* src/lib/geodata/data/GeoDataPlaceMark.h:
+	Add apidox.  GeoDataObject and GeoDataPlaceMark are finished,
+	GeoDataFeature not really yet.
+
 2007-11-01 Andrew Manson <g.real.ate@gmail.com>
     Altered the gps layer update scheme to stop it 
     updating anything if the gps location has not changed.
@@ -76,6 +85,7 @@
 	* data/legend.html:
 
 2007-09-26  Torsten Rahn  <rahn@kde.org>
+
 	* src/lib/TextureColorizer.cpp:
 	* src/lib/texturepalette.cpp:
 	* src/lib/MarbleModel.h:
@@ -84,6 +94,7 @@
 	- Fixed bug introduced by ingwa
 
 2007-09-26  Torsten Rahn  <rahn@kde.org>
+
 	* src/lib/PlaceMarkLayout.{h,cpp}:
 	- Adding placeMarksOnScreenLimit()
 
